--- a/phase-3/templates/thankyou.html
+++ b/phase-3/templates/thankyou.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-</head>
-<body>
-    <h3>Thanks you for submitting ! Your feedback has been submitted</h3>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Thank you Filling form{% endblock title %}
+
+{% block content  %}
+<h1>Thank you {{name}}</h1>
+<p>we appreciate your feedback</p>
+
+<P>{{message}}</P>
+{% endblock content  %}
